--- a/IngresoPedidos/Views/MainWindow.xaml
+++ b/IngresoPedidos/Views/MainWindow.xaml
@@ -120,7 +120,7 @@
         <ToolBar VerticalAlignment="Top" ToolBarTray.IsLocked="False" Background="#FFA9D1F4" Margin="7,0,0,0" VerticalContentAlignment="Center" HorizontalAlignment="Left">
             <!--<ToolBar VerticalContentAlignment="Center" Margin="0,0,0,-10" VerticalAlignment="Center" HorizontalContentAlignment="Center" Width="1434">-->
 
-            <Button Command="Copy" ToolTip="Ingresar un nuevo pedido" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0">
+            <Button Command="Copy" Click="Button_Click_4" ToolTip="Ingresar un nuevo pedido" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/IngresoPedidos;component/Resources/add.ico" Width="48" Height="48" />
                     <!--<TextBlock Margin="3,0,0,0">Buscar</TextBlock>-->
@@ -145,14 +145,14 @@
                     </StackPanel>
                 </Button>-->
 
-            <Button Command="Copy" ToolTip="Editar registro seleccionado">
+            <Button Command="Copy" Click="Button_Click_5" ToolTip="Editar registro seleccionado">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/IngresoPedidos;component/Resources/48.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     <!--<TextBlock Margin="3,0,0,0">Eliminar</TextBlock>-->
                 </StackPanel>
             </Button>
 
-            <Button Command="Copy" ToolTip="Buscar un registro específico">
+            <Button Command="Copy" Click="Button_Click_2" ToolTip="Buscar un registro específico">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/IngresoPedidos;component/Resources/search.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     <!--<TextBlock Margin="3,0,0,0">Movimientos</TextBlock>-->
@@ -214,14 +214,14 @@
                 </StackPanel>
             </Button>
 
-            <Button Command="Copy" ToolTip="Ver imágen del modelo seleccionado">
+            <Button Click="Button_Click_1" ToolTip="Ver imágen del modelo seleccionado">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/IngresoPedidos;component/Resources/48 (5).ico" HorizontalAlignment="Center" VerticalAlignment="Center" Width="48" Height="48" />
                     <!--<TextBlock Margin="3,0,0,0">Cambiar Contraseña</TextBlock>-->
                 </StackPanel>
             </Button>
 
-            <Button Command="Copy" ToolTip="Ver movimientos del registro seleccionado">
+            <Button Command="Copy" Click="Button_Click_3" ToolTip="Ver movimientos del registro seleccionado">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/IngresoPedidos;component/Resources/128.ico" HorizontalAlignment="Center" VerticalAlignment="Center" Width="48" Height="48" />
                     <!--<TextBlock Margin="3,0,0,0">Cambiar Contraseña</TextBlock>-->
