--- a/IngresoPedidos/Views/MovimientosView.xaml
+++ b/IngresoPedidos/Views/MovimientosView.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="INGRESO DE PEDIDOS: MOVIMIENTOS DEL REGISTRO 1234567A-00" Height="360" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <TextBox Name="tbMovimientos" VerticalScrollBarVisibility="Auto" Margin="10" IsReadOnly="True" TextWrapping="Wrap" FontFamily="Consolas" FontSize="16" />
+        <TextBox Name="tbMovimientos" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="10,41,10,10" IsReadOnly="True" TextWrapping="Wrap" FontFamily="Consolas" FontSize="14" Padding="0" />
+        <Label Margin="10,10,10,0" Content="  FECHA    -   HORA   : LEGAJO : EVENTO [ATRIBUTO] [COMENTARIO]" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" FontFamily="Consolas" FontSize="14" FontWeight="Bold" Padding="3,5,0,5"/>
 
     </Grid>
 </Window>
