--- a/IngresoPedidos/Views/MovimientosView.xaml
+++ b/IngresoPedidos/Views/MovimientosView.xaml
@@ -8,7 +8,7 @@
         Title="INGRESO DE PEDIDOS: MOVIMIENTOS DEL REGISTRO 1234567A-00" Height="360" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <TextBox Name="tbMovimientos" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="10,41,10,10" IsReadOnly="True" TextWrapping="Wrap" FontFamily="Consolas" FontSize="14" Padding="0" />
-        <Label Margin="10,10,10,0" Content="  FECHA    -   HORA   : LEGAJO : EVENTO [ATRIBUTO] [COMENTARIO]" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" FontFamily="Consolas" FontSize="14" FontWeight="Bold" Padding="3,5,0,5"/>
+        <Label Margin="10,10,10,0" Content="  FECHA    -   HORA   : LEGAJO : EVENTO [ATRIBUTO] [COMENTARIO]" VerticalAlignment="Top" Background="#FFA9D1F4" FontFamily="Consolas" FontSize="14" FontWeight="Bold" Padding="3,5,0,5"/>
 
     </Grid>
 </Window>
