--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -1,72 +1,88 @@
 ﻿<Application x:Class="IngresoPedidos.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:IngresoPedidos"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-        <Style TargetType="Hyperlink" x:Key="FieldHyperlink">
-            <!--<Setter Property="Foreground" Value="DarkGreen"/>-->
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding IsSelected, RelativeSource= {RelativeSource AncestorType={x:Type DataGridRow}}}" Value="True">
-                    <Setter Property="Foreground" Value="White" />
-                </DataTrigger>
-            </Style.Triggers>
+        
+        <Style x:Name="ToolBarStyle" TargetType="{x:Type ToolBar}">
+            <Setter Property="Background" Value="#FFA9D1F4"/>
         </Style>
-        
-        
-        <Style x:Key="RowStyleWithAlternation" TargetType="DataGridRow">
-            <Setter Property="SnapsToDevicePixels" Value="True" />
-            <Setter Property="Background" Value="GhostWhite"/>
-            <Setter Property="FontWeight" Value="Normal"/>
-            <Setter Property="ContextMenu" Value="{x:Null}"/>
-            <Setter Property="Margin" Value="1,0,0,0"/>
-            <!--<DataGrid.Resources>
-                <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="DarkGray"/>
-            </DataGrid.Resources>-->
-            
+
+        <Style x:Name="MainDataGridStyle" TargetType="{x:Type DataGrid}">
+            <Setter Property="Height" Value="Auto" />
+            <Setter Property="BorderThickness" Value="3"/>
+            <Setter Property="BorderBrush" Value="#FFA9D1F4"/>
+            <Setter Property="SelectionUnit" Value="FullRow"/>
+            <Setter Property="HorizontalGridLinesBrush" Value="#FFA9D1F4"/>
+            <Setter Property="GridLinesVisibility" Value="Horizontal"/>
+            <Setter Property="AlternationCount" Value="2"/>
+            <Setter Property="ColumnHeaderHeight" Value="28"/>
+            <Setter Property="IsSynchronizedWithCurrentItem" Value="False"/>
+            <Setter Property="EnableColumnVirtualization" Value="True"/>
+            <Setter Property="CanUserAddRows" Value="False"/>
+            <Setter Property="CanUserDeleteRows" Value="False"/>
+            <Setter Property="CanUserReorderColumns" Value="False"/>
+            <Setter Property="CanUserResizeColumns" Value="False"/>
+            <Setter Property="CanUserResizeRows" Value="False"/>
+            <Setter Property="CanUserSortColumns" Value="False"/>
+            <Setter Property="Margin" Value="10,64,10,10"/>
+            <Setter Property="AutoGenerateColumns" Value="False"/>
+            <Setter Property="IsReadOnly" Value="True"/>
+            <Setter Property="SelectionMode" Value="Extended"/>
+            <Setter Property="EnableRowVirtualization" Value="True"/>
+            <Setter Property="FontFamily" Value="Consolas"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Background" Value="{x:Null}"/>
+            <Setter Property="MinRowHeight" Value="28"/>
+            <Setter Property="RowHeaderWidth" Value="0"/>
             <Style.Triggers>
-                
-                <Trigger Property="AlternationIndex" Value="1">
-                    <Setter Property="Background" Value="#FFE6E6E6"/>
+                <Trigger Property="AlternationIndex" Value="0">
+                    <Setter Property="Background" Value="{x:Null}"/>
                 </Trigger>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#F9F99F"/>
+                    <Setter Property="Background" Value="{x:Null}"/>
                 </Trigger>
                 <Trigger Property="IsSelected" Value="True">
-                    <Setter Property="Background" Value="#F9F99F" />
-                </Trigger>
-                
-                <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="Effect">
-                        <Setter.Value>
-                            <DropShadowEffect Color="Red" ShadowDepth="0" BlurRadius="20" />
-                        </Setter.Value>
-                    </Setter>
-                    <Setter Property="BorderThickness" Value="1" />
-                    <Setter Property="BorderBrush" Value="#FFA9D1F4" />
-                    <Setter Property="Foreground" Value="Blue" />
-                    <Setter Property="FontSize" Value="12" />
+                    <Setter Property="Background" Value="{x:Null}" />
                 </Trigger>
             </Style.Triggers>
         </Style>
 
-        <Style x:Key="ColumnHeaderStyle" TargetType="DataGridColumnHeader">
+        <Style x:Key="ColumnHeaderStyle" TargetType="{x:Type DataGridColumnHeader}">
             <Setter Property="SnapsToDevicePixels" Value="True" />
             <Setter Property="Background" Value="#FFA9D1F4"/>
             <Setter Property="FontWeight" Value="Medium"/>
             <Setter Property="ContextMenu" Value="{x:Null}"/>
             <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="BorderBrush" Value="#FFE6E6E6" />
+            <Setter Property="BorderBrush" Value="GhostWhite" />
             <Setter Property="Foreground" Value="Black" />
             <Setter Property="FontSize" Value="16" />
             <Setter Property="Padding" Value="5,0,0,0"/>
             <Setter Property="Margin" Value="0,1,0,1"/>
-            
         </Style>
 
+        <Style x:Key="DataGridRowZebra" TargetType="{x:Type DataGridRow}">
+            <Setter Property="SnapsToDevicePixels" Value="True" />
+            <Setter Property="Background" Value="LightGray"/>
+            <Setter Property="FontWeight" Value="Normal"/>
+            <Setter Property="ContextMenu" Value="{x:Null}"/>
+            <Setter Property="Margin" Value="1,0,0,0"/>
+            <Style.Triggers>
+                <Trigger Property="AlternationIndex" Value="1">
+                    <Setter Property="Background" Value="{x:Null}"/>
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="LightYellow"/>
+                </Trigger>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="{x:Null}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
 
-
-        <Style x:Key="DataGridContentCellCentering" TargetType="{x:Type DataGridCell}">
+        <Style x:Key="DataGridCellCentrada" TargetType="{x:Type DataGridCell}">
             <Setter Property="TextBlock.TextAlignment" Value="Center" />
             <Setter Property="Template">
                 <Setter.Value>
@@ -79,6 +95,25 @@
             </Setter>
         </Style>
 
+        <Style x:Name="HyperlinkSeleccionado" TargetType="{x:Type Hyperlink}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}}" Value="True">
+                    <Setter Property="Foreground" Value="GhostWhite" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        
+        <Style TargetType="{x:Type ListBoxItem}">
+            <Setter Property="Selector.Background" Value="{x:Null}"/>
+            <Style.Triggers>
+                <Trigger Property="ItemsControl.AlternationIndex" Value="0">
+                    <Setter Property="Background" Value="{x:Null}"/>
+                </Trigger>
+                <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                    <Setter Property="Background" Value="LightGray"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
 
     </Application.Resources>
 </Application>
