--- a/IngresoPedidos/Views/MovimientosView.xaml
+++ b/IngresoPedidos/Views/MovimientosView.xaml
@@ -5,10 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IngresoPedidos.Views"
         mc:Ignorable="d"
-        Title="INGRESO DE PEDIDOS: MOVIMIENTOS DEL REGISTRO 1234567A-00" Height="360" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <TextBox Name="tbMovimientos" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="10,41,10,10" IsReadOnly="True" TextWrapping="Wrap" FontFamily="Consolas" FontSize="14" Padding="0" />
-        <Label Margin="10,10,10,0" Content="  FECHA    -   HORA   : LEGAJO : EVENTO [ATRIBUTO] [COMENTARIO]" VerticalAlignment="Top" Background="#FFA9D1F4" FontFamily="Consolas" FontSize="14" FontWeight="Bold" Padding="3,5,0,5"/>
-
+        Title="MOVIMIENTOS DEL REGISTRO 1234567A-00" Height="480" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+    <Grid Margin="0">
+        <!--<TextBox Name="tbMovimientos" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" TextWrapping="NoWrap" Margin="10,302,10,10" IsReadOnly="True" FontFamily="Consolas" FontSize="14" Padding="0" />-->
+        <Label Margin="10,10,0,0" Content="FECHA" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="84"/>
+        <Label Margin="95,10,0,0" Content="HORA" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="71"/>
+        <Label Margin="167,10,0,0" Content="LEGAJO" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="59"/>
+        <Label Margin="0,10,10,0" Content="EVENTO [ARGUMENTO] [COMENTARIO]" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="5,0,0,0" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="477"/>
+        <ListBox AlternationCount="2" Name="lbMovimientos" BorderBrush="#FFA9D1F4" SelectionMode="Single" BorderThickness="2" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,41,10,10" FontFamily="Consolas"/>
     </Grid>
 </Window>
