--- a/IngresoPedidos/Views/MovimientosView.xaml
+++ b/IngresoPedidos/Views/MovimientosView.xaml
@@ -11,7 +11,7 @@
         <Label Margin="10,10,0,0" Content="FECHA" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="84"/>
         <Label Margin="95,10,0,0" Content="HORA" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="71"/>
         <Label Margin="167,10,0,0" Content="LEGAJO" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="59"/>
-        <Label Margin="0,10,10,0" Content="EVENTO [ARGUMENTO] [COMENTARIO]" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="5,0,0,0" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="477"/>
+        <Label Margin="227,10,10,0" Content="EVENTO [ARGUMENTO] [COMENTARIO]" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="5,0,0,0" Height="26" VerticalContentAlignment="Center"/>
         <ListBox AlternationCount="2" Name="lbMovimientos" BorderBrush="#FFA9D1F4" SelectionMode="Single" BorderThickness="2" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,41,10,10" FontFamily="Consolas"/>
     </Grid>
 </Window>
