--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -65,7 +65,7 @@
 
         <Style x:Key="DataGridRowZebra" TargetType="{x:Type DataGridRow}">
             <Setter Property="SnapsToDevicePixels" Value="True" />
-            <Setter Property="Background" Value="LightGray"/>
+            <Setter Property="Background" Value="#FFE6E6E6"/>
             <Setter Property="FontWeight" Value="Normal"/>
             <Setter Property="ContextMenu" Value="{x:Null}"/>
             <Setter Property="Margin" Value="1,0,0,0"/>
@@ -110,7 +110,7 @@
                     <Setter Property="Background" Value="{x:Null}"/>
                 </Trigger>
                 <Trigger Property="ItemsControl.AlternationIndex" Value="1">
-                    <Setter Property="Background" Value="LightGray"/>
+                    <Setter Property="Background" Value="#F9F99F"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
