--- a/IngresoPedidos/Views/NuevoPasswordView.xaml
+++ b/IngresoPedidos/Views/NuevoPasswordView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="IngresoPedidos.Views.NuevoView"
+﻿<Window x:Class="IngresoPedidos.Views.NuevoPasswordView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IngresoPedidos.Views"
         mc:Ignorable="d"
-        Title="INGRESO DE PEDIDOS: NUEVO REGISTRO" Height="320" Width="640" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="NuevoPasswordView" Height="450" Width="800">
     <Grid>
         
     </Grid>
