--- a/IngresoPedidos/Views/ImagenView.xaml
+++ b/IngresoPedidos/Views/ImagenView.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="NOTEBOOK EF21" Height="480" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/IngresoPedidos;component/Resources/orderadd.ico">
     <Grid>
-        <Border BorderThickness="2" BorderBrush="#FFA9D1F4" Margin="10">
-        <Image Source="/IngresoPedidos;component/Resources/NOT1422EXO.jpg"/>
-        </Border>
+        <!--<Border BorderThickness="2" BorderBrush="#FFA9D1F4" Margin="10">-->
+        <Image Source="/IngresoPedidos;component/Resources/NOT1422EXO.jpg" Margin="10"/>
+        <!--</Border>-->
     </Grid>
 </Window>
