--- a/IngresoPedidos/Views/MainWindow.xaml
+++ b/IngresoPedidos/Views/MainWindow.xaml
@@ -10,9 +10,9 @@
         <viewModels:MainViewModel x:Key="ViewModel" />
     </Window.Resources>
     <Grid DataContext="{Binding Source={StaticResource ViewModel}}">
-        <Grid VerticalAlignment="Top" Background="#FFA9D1F4" Margin="622,1,10,0" Height="57">
+        <Grid VerticalAlignment="Top" Background="#FFA9D1F4" Margin="644,1,10,0" Height="57">
             <Label VerticalAlignment="Top" Margin="0,0,5,5" BorderThickness="1" VerticalContentAlignment="Center" TextOptions.TextFormattingMode="Display" Padding="5" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Content="425 / SCHNEIDER NICOLAS" Background="{x:Null}" FontFamily="Consolas" Height="24"/>
-            <ComboBox x:Name="cbFiltros" Margin="0,0,5,5" FontFamily="Consolas" SelectedIndex="10" ItemsSource="{Binding _listaFiltros}" SelectedItem="{Binding FiltroSeleccionado}" FontWeight="Medium" FontSize="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="148" Height="24"/>
+            <ComboBox x:Name="cbFiltros" Margin="0,0,5,5" FontFamily="Consolas" SelectedIndex="10" ItemsSource="{Binding _listaFiltros}" SelectedItem="{Binding FiltroSeleccionado}" FontWeight="Medium" FontSize="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="150" Height="24"/>
         </Grid>
         <DataGrid ItemsSource="{Binding ListaPedidos, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" SelectedItem="{Binding PedidoSeleccionado, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" ColumnWidth="*">
             <DataGrid.Resources>
@@ -58,10 +58,10 @@
                     </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <ToolBar VerticalAlignment="Top" ToolBarTray.IsLocked="False" Margin="7,0,0,0" VerticalContentAlignment="Center" HorizontalAlignment="Left">
-            <Button Command="Copy" Click="Button_Click_4" ToolTip="Ingresar un nuevo pedido" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0">
+        <ToolBar VerticalAlignment="Top" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="7,0,0,0">
+            <Button Command="Copy" Click="Button_Click_5" ToolTip="Ingresar un nuevo pedido">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/add.ico" Width="48" Height="48" />
+                    <Image Source="/IngresoPedidos;component/Resources/add.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
             <Button Command="Copy" Click="Button_Click_5" ToolTip="Editar registro seleccionado">
@@ -69,12 +69,17 @@
                     <Image Source="/IngresoPedidos;component/Resources/48.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
+            <Separator Margin="5,2"/>
             <Button Command="Copy" Click="Button_Click_2" ToolTip="Buscar un registro específico">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/IngresoPedidos;component/Resources/search.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
-            <Separator Margin="10,2"/>
+            <Button Command="Copy" ToolTip="Copia los registros seleccionados">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="/IngresoPedidos;component/Resources/copy.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                </StackPanel>
+            </Button>
             <Button Command="Copy" ToolTip="Generar recibo de entrega">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/IngresoPedidos;component/Resources/rubberstamp256.png" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
@@ -82,17 +87,17 @@
             </Button>
             <Button Command="Copy" ToolTip="Exportar selección a planilla">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/128 (8).ico" HorizontalAlignment="Center" VerticalAlignment="Center" Width="48" Height="48" />
+                    <Image Source="/IngresoPedidos;component/Resources/128 (8).ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
             <Button Click="Button_Click_1" ToolTip="Ver imágen del modelo seleccionado">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/48 (5).ico" HorizontalAlignment="Center" VerticalAlignment="Center" Width="48" Height="48" />
+                    <Image Source="/IngresoPedidos;component/Resources/48 (5).ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
             <Button Command="Copy" Click="Button_Click_3" ToolTip="Ver movimientos del registro seleccionado">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/128.ico" HorizontalAlignment="Center" VerticalAlignment="Center" Width="48" Height="48" />
+                    <Image Source="/IngresoPedidos;component/Resources/128.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
             <Separator Margin="5,2"/>
@@ -102,14 +107,14 @@
                 </StackPanel>
             </Button>
             <Separator Margin="5,2"/>
-            <Button Command="Copy" ToolTip="Cambiar contraseña" Margin="5,0">
+            <Button Command="Copy" ToolTip="Cambiar contraseña">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/48 (4).ico" Width="48" Height="48" />
+                    <Image Source="/IngresoPedidos;component/Resources/48 (4).ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
             <Button Command="Copy" ToolTip="Cerrar sesion">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/48 (3).ico" Width="48" Height="48" Margin="5,0" />
+                    <Image Source="/IngresoPedidos;component/Resources/48 (3).ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
         </ToolBar>
